# ConditionalUNet_web_app

./: .dockerignore  README.md  UNet.py  app.py  dockerfile  frontend.html  pyproject.toml  requirements.txt
model/: UNet.py  UNet_parts.py
netlify/functions/: proxy.js
schema/: output.py  user_input.py
